# MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  dataclass.py  pyproject.toml
.dvc/: config
config/: config.yaml
dog_mlops/: DataClass.py  Dog_train.py  dataclass.py  dog_infer.py  dog_train.py  from utils.py  model.py  utils.py
lightning_logs/version_0/: events.out.tfevents.1704400254.max-Victus.9081.0
lightning_logs/version_1/: events.out.tfevents.1704400282.max-Victus.9409.0
lightning_logs/version_10/: events.out.tfevents.1704403387.max-Victus.13490.0  hparams.yaml
lightning_logs/version_11/: events.out.tfevents.1704403412.max-Victus.13738.0
lightning_logs/version_12/: events.out.tfevents.1704403441.max-Victus.13984.0
lightning_logs/version_13/: events.out.tfevents.1704403670.max-Victus.14263.0
lightning_logs/version_14/: events.out.tfevents.1704404553.max-Victus.14985.0
lightning_logs/version_15/: events.out.tfevents.1704404697.max-Victus.15304.0
lightning_logs/version_16/: events.out.tfevents.1704404907.max-Victus.15596.0
lightning_logs/version_17/: events.out.tfevents.1704404954.max-Victus.15852.0
lightning_logs/version_18/: events.out.tfevents.1704404996.max-Victus.16202.0
lightning_logs/version_19/: events.out.tfevents.1704405041.max-Victus.16462.0
lightning_logs/version_2/: events.out.tfevents.1704401701.max-Victus.10815.0  hparams.yaml
lightning_logs/version_20/: events.out.tfevents.1704405067.max-Victus.16705.0
lightning_logs/version_21/: events.out.tfevents.1704405095.max-Victus.16962.0
(+20 files in other folders)
